@@ -16,35 +16,11 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  *********************************************************************************/
 
-#ifndef VOIKKO_SPELLCHECKER_SPELLER
-#define VOIKKO_SPELLCHECKER_SPELLER
-
-#include <cstring>
+#include "spellchecker/Speller.hpp"
 
 namespace libvoikko { namespace spellchecker {
 
-/* SPELL_FAILED:    Word does not exist in the language even if the character cases
- *                  were changed.
- * SPELL_OK:        Word is correct.
- * SPELL_CAP_FIRST: Word would be correct if the first letter was changed to upper case.
- * SPELL_CAP_ERROR: Word would be correct if some of its characters were in different case.
-*/
-enum spellresult {SPELL_FAILED, SPELL_OK, SPELL_CAP_FIRST, SPELL_CAP_ERROR};
-    
-/**
- * General interface for spellers.
- */
-class Speller {
-	public:
-		/**
-		 * Checks whether given word is correct (or would be correct
-		 * with different capitalization).
-		 */
-		virtual spellresult spell(const wchar_t * word, size_t wlen) = 0;
-		virtual void terminate() = 0;
-		virtual ~Speller();
-};
+Speller::~Speller() {
+}
 
 } }
-
-#endif
